--- a/src/topContainer/Content.css
+++ b/src/topContainer/Content.css
@@ -14,7 +14,7 @@
   background-position: 0px 0px;
   background-repeat: no-repeat;
   animation: animatedBackground 180s linear infinite alternate;
-  /* background-size: auto 100%; */
+  background-size: 100% 100%;
 }
 
 #hovering-row {
