--- a/src/bottomContainer/footerTemp.css
+++ b/src/bottomContainer/footerTemp.css
@@ -35,7 +35,8 @@
 .footer-links
 {
   padding-left:0;
-  list-style:none
+  list-style:none;
+  text-decoration: none;
 }
 .footer-links li
 {
@@ -122,8 +123,10 @@
   border-radius:100%;
   -webkit-transition:all .2s linear;
   -o-transition:all .2s linear;
-  transition:all .2s linear
+  transition:all .2s linear;
+  text-decoration: none;
 }
+
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
   color:#fff;
@@ -160,4 +163,14 @@
     margin-right:0;
     font-weight:600
   }
+}
+
+a{
+  text-decoration: none;
+}
+
+.foot{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
