Our mission done

--- a/src/topContainer/Content.css
+++ b/src/topContainer/Content.css
@@ -20,7 +20,7 @@ body {
   background-position: 0px 0px;
   background-repeat: no-repeat;
 
-  animation: animatedBackground 60s linear infinite alternate;
+  /* animation: animatedBackground 60s linear infinite alternate; */
   -webkit-transition: background 1s;
   -moz-transition: background 1s;
   -o-transition: background 1s;
@@ -28,7 +28,7 @@ body {
   /* background-size: auto 100%; */
 
   animation: animatedBackground 180s linear infinite alternate;
-  background-size: 100% 100%;
+  /* background-size: 100% 100%; */
 
 }
 
