--- a/src/bottomContainer/team.css
+++ b/src/bottomContainer/team.css
@@ -6,7 +6,7 @@
   margin: 20px;
 }
 
-.card {
+.card-team {
   margin: auto 30px;
   background-image: url(../images/motu.jpg);
   background-repeat: no-repeat;
