--- a/src/topContainer/Content.css
+++ b/src/topContainer/Content.css
@@ -13,6 +13,12 @@ body {
   overflow-x: hidden;
 }
 
+.logo{
+  width: 400px;
+  height: 300px;
+  margin-top: 0;
+}
+
 #top-content {
   height: 95vh;
   margin: 0;
@@ -32,7 +38,7 @@ body {
 }
 
 #top-header {
-  padding-top: 30vh;
+  padding-top: 20px;
   text-align: center;
   color: white;
 }
@@ -41,6 +47,7 @@ body {
   font-size: 6rem;
   font-family: 'Fraunces', serif;
   color: white;
+  margin: 0;
 }
 
 #hovering-row {
