--- a/src/middleContainer/middle3.css
+++ b/src/middleContainer/middle3.css
@@ -11,7 +11,7 @@
 }
 
 .card{
-    background-color: gold;
+    background-color: #f3a94e;
     color: black;
     text-align: center;
     margin-top: 20px;
