--- a/src/topContainer/Content.css
+++ b/src/topContainer/Content.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');
 
 @keyframes animatedBackground {
   from {
