--- a/src/bottomContainer/footerTemp.css
+++ b/src/bottomContainer/footerTemp.css
@@ -29,7 +29,7 @@
 }
 .site-footer a:hover
 {
-  color:#3366cc;
+  color:#f3a94e;
   text-decoration:none;
 }
 .footer-links
@@ -48,7 +48,7 @@
 }
 .footer-links a:active,.footer-links a:focus,.footer-links a:hover
 {
-  color:#3366cc;
+  color:#f3a94e;
   text-decoration:none;
 }
 .footer-links.inline li
@@ -130,7 +130,7 @@
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
   color:#fff;
-  background-color:#29aafe
+  background-color:#f3a94e
 }
 .social-icons.size-sm a
 {
@@ -139,21 +139,17 @@
   width:34px;
   font-size:14px
 }
-.social-icons a.facebook:hover
+.social-icons a.linkedIn:hover
 {
   background-color:#3b5998
 }
-.social-icons a.twitter:hover
+.social-icons a.youTube:hover
 {
-  background-color:#00aced
+  background-color:#e21325
 }
-.social-icons a.linkedin:hover
+.social-icons a.instagram:hover
 {
-  background-color:#007bb6
-}
-.social-icons a.dribbble:hover
-{
-  background-color:#ea4c89
+  background-color:#be1656
 }
 @media (max-width:767px)
 {
